vlib/v/checker/tests/assign_fn_call_on_left_side_err.vv
fn foo(s string) int {
	return 1
}

fn main() {
	foo('s') = 1
}
